--- a/_posts/2019-07-19-leetcode.md
+++ b/_posts/2019-07-19-leetcode.md
@@ -12,9 +12,13 @@ tags:
 
 > Two major steps for solution all programming problems: 
 > 
-> 1. How do we define each **state?** Programs are just a series of chained states.
+> 1. How do we define each **state?** Programs are just a series of **chained (by actions)** states.
 > 
-> 2. How is the **information** needed to determine our **action** in each state?
+> 2. Do you know how to solve the problem (**take next action**) given a random state?
+> 
+> 3. What is the **information** needed to determine our **action** in each state?
+> 
+> Also, take care that many problems may have **sub-problems!** In this case, we need to define new states for sub / super problem.
 
 #### 207. Course Schedule
 
