--- a/_posts/2019-05-17-java-fund.md
+++ b/_posts/2019-05-17-java-fund.md
@@ -279,8 +279,9 @@ public class CarProducer<T> implements MyProducer<T>{
 
 // To Continue: last time stop at [here](https://www.javatpoint.com/runtime-polymorphism-in-java)
 
+### Exception Handling
 
+> [How2J](http://how2j.cn/k/exception/exception-trycatch/336.html#nowhere) gives great examples and explanation for Java exception handling.
 
-
-
-
+- try - catch - finally - throw
+- throws
