--- a/_posts/2019-07-09-how2j.md
+++ b/_posts/2019-07-09-how2j.md
@@ -12,3 +12,4 @@ tags:
 
 > This is the offical site of [How2J](http://how2j.cn/). And this post is about to track my progress of implementing interested projects from this site.
 
+> Because the How2J official site needs Chinese phone number to sign up, I found [this blog](https://www.cnblogs.com/czwbig/p/9950134.html) which also contained the almost Tmall project.
