--- a/_posts/2019-07-19-leetcode.md
+++ b/_posts/2019-07-19-leetcode.md
@@ -24,3 +24,10 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;In the situation of a graph, it is easy to define the **state** by **check each connected subgraph**!
 
+#### 410. Split Array Largest Sum
+
+&nbsp;&nbsp;&nbsp;&nbsp;Backtracking basically happens when we have to *list* all the results. However, if we need to find the **optimal** result, I believe we may avoid backtracking by some way. 
+
+&nbsp;&nbsp;&nbsp;&nbsp;2D even ND dynamic programming may be detected also by observing **redundent calculations**, the key is that current optimal may be affected by more than just one previous optimal states. 
+
+&nbsp;&nbsp;&nbsp;&nbsp;Also, keep in mind that **state may not be 1D**.
