--- a/_posts/2019-07-24-tomcat.md
+++ b/_posts/2019-07-24-tomcat.md
@@ -30,7 +30,7 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;The servlet running process described in the following image
 
-![running_process](./img/in-post/2019-07-24-servlet/running_process.png)
+![running_process](.\img\in-post\2019-07-24-servlet\running_process.png)
 
 &nbsp;&nbsp;&nbsp;&nbsp;The user firstly accessed the `.html` file for all the front end services, then the *login button* is bind with a `POST` action to `/login` in the html file. This action will cause the server to load / instanciate the LoginServlet and pass the requst and response object to the servlet.
 
