--- a/_posts/2019-07-24-tomcat.md
+++ b/_posts/2019-07-24-tomcat.md
@@ -30,7 +30,7 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;The servlet running process described in the following image
 
-![running_process](.\img\in-post\2019-07-24-servlet\running_process.png)
+![running_process](\img\in-post\2019-07-24-servlet\running_process.png)
 
 &nbsp;&nbsp;&nbsp;&nbsp;The user firstly accessed the `.html` file for all the front end services, then the *login button* is bind with a `POST` action to `/login` in the html file. This action will cause the server to load / instanciate the LoginServlet and pass the requst and response object to the servlet.
 
@@ -38,6 +38,6 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;As shown in the image below, there are two kind of jumps in Java servlet: *server end jump* and *client end jump*.
 
-![running_process](.\img\in-post\2019-07-24-servlet\jump.png)
+![jump](\img\in-post\2019-07-24-servlet\jump.png)
 
 &nbsp;&nbsp;&nbsp;&nbsp;Of course, all the jumps are **initiated** by the server based on the request information. But the difference is the server end jump will do the **redirect** on server side, and the client end jump will **tell** the client to go another place.
