--- a/_posts/2019-07-24-tomcat.md
+++ b/_posts/2019-07-24-tomcat.md
@@ -18,6 +18,7 @@ tags:
 - In unix system, to bind webserver with port number less than 1024, we need to `sudo` the operation.
 - Use `[sudo] lsof -i :port_number` to check the usage of certain port.
 - To set the `Context` tag in tomcat, we have to use **absolute path** for parameter `docBase`.
+- The output `Class` file needs to be directly inside `/web/classes`. No subdirector can be used inside the classes folder.
 
 #### Difference Between Static & Dynamic Web Page
 
@@ -41,3 +42,7 @@ tags:
 ![jump](\img\in-post\2019-07-24-servlet\jump.png)
 
 &nbsp;&nbsp;&nbsp;&nbsp;Of course, all the jumps are **initiated** by the server based on the request information. But the difference is the server end jump will do the **redirect** on server side, and the client end jump will **tell** the client to go another place.
+
+### Upload File
+
+&nbsp;&nbsp;&nbsp;&nbsp;File uploading is achived by using **stream** for both uploading and saving the file. Code in [this tutorial](https://www.codejava.net/java-ee/servlet/upload-file-to-servlet-without-using-html-form) is very clear that we can get other information such as file name, uploader from the http parameter / header, but for the file itself, we need to use **stream** and **buffer** to read it.
