--- a/_posts/2019-07-24-tomcat.md
+++ b/_posts/2019-07-24-tomcat.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Tomecat & Java Servlet"
+title:      "Tomecat & Java Servlet & JSP"
 subtitle:   ""
 date:       2019-07-24
 author:     "Jiayi.Liu"
@@ -46,3 +46,13 @@ tags:
 ### Upload File
 
 &nbsp;&nbsp;&nbsp;&nbsp;File uploading is achived by using **stream** for both uploading and saving the file. Code in [this tutorial](https://www.codejava.net/java-ee/servlet/upload-file-to-servlet-without-using-html-form) is very clear that we can get other information such as file name, uploader from the http parameter / header, but for the file itself, we need to use **stream** and **buffer** to read it.
+
+## JSP
+
+&nbsp;&nbsp;&nbsp;&nbsp;JSP can be considered as a HTML file that can run Java code. The advantage of using JSP is that it's easier to format the HTML code in JSP than Java servlet.
+
+&nbsp;&nbsp;&nbsp;&nbsp;According to the MVC design pattern, we should separate a web project to: Model (Database, MySQL etc.), View (Front End, JSP etc.), and Controller (Back End, Servlet etc.). And the method of doing such seperation is to seperate JSP and servlet implementation. It can be achieved by 2 steps:
+
+1. Set useful parameters (got from database) in servlet with `.setAttribute` (see [here](http://how2j.cn/k/jsp/jsp-scope/584.html) for more information) which will make the attributes visible to some JSP scope.
+2. Redirect the request to cooresponding JSP page.
+
