--- a/_posts/2019-07-24-tomcat.md
+++ b/_posts/2019-07-24-tomcat.md
@@ -56,3 +56,4 @@ tags:
 1. Set useful parameters (got from database) in servlet with `.setAttribute` (see [here](http://how2j.cn/k/jsp/jsp-scope/584.html) for more information) which will make the attributes visible to some JSP scope.
 2. Redirect the request to cooresponding JSP page.
 
+&nbsp;&nbsp;&nbsp;&nbsp;Keep in mind that **JSP has multiple scopes** and they may be used under different situations. Such as in shopping cart application like [this one](http://how2j.cn/k/cart/cart-cart/598.html) we may cache the selected item in session and write to the database just once.
