--- a/_posts/2019-07-25-jdbc.md
+++ b/_posts/2019-07-25-jdbc.md
@@ -16,3 +16,5 @@ tags:
 2. Build a **connection object** by providing needed informations.
 3. Build a **statement object** and use `statement_object.execute(String s)` to execute SQL statement.
 4. Database connection is an important resources, always remember to close statement first, then connection.
+
+&nbsp;&nbsp;&nbsp;&nbsp;In the convention of accessing database from Java program, we will build a **DAO**, which means **data access object**. The DAO should implement all the functions about CRUD (creation, retrival, update, deletion -- the 4 major operation for data), and the Java program such as servlet can only use the DAO to access certain tables instead of write the code everytime.
