--- a/_posts/2019-07-25-jdbc.md
+++ b/_posts/2019-07-25-jdbc.md
@@ -10,6 +10,31 @@ tags:
     - JavaEE
 ---
 
+## MySQL
+
+### Install MySQL Server
+
+&nbsp;&nbsp;&nbsp;&nbsp;To play with JDBC, the first step is always to set up a database, for here, MySQL.
+
+&nbsp;&nbsp;&nbsp;&nbsp;For MacOS, it is very convenient to set up MySQL with `homebrew`. Check [this answer](https://tecadmin.net/install-mysql-macos/) and install MySQL to your local mac machine.
+
+&nbsp;&nbsp;&nbsp;&nbsp;To start, stop, restart or check status of your mysql database, use `mysql.server` command as:
+
+- mysql.server status
+- mysql.server stop 
+- mysql.server start   
+- mysql.server restart  
+
+### MySQL Front
+
+&nbsp;&nbsp;&nbsp;&nbsp;You don't really need a front end program for MySQL. As long as you have connected to the server, you should be able to use any SQL query through terminal.
+
+### Login
+
+&nbsp;&nbsp;&nbsp;&nbsp;To login as root user, you need to run `mysql -u root -p`, then input the password for root user.
+
+## JDBC
+
 &nbsp;&nbsp;&nbsp;&nbsp;According to the [How2J](http://how2j.cn/k/jdbc/jdbc-mysql/386.html) tutorial, there are 4 major steps for connecting and executing SQL statement from Java server:
 
 1. Initiate JDBC **driver** class.
