--- a/_posts/2019-07-25-jdbc.md
+++ b/_posts/2019-07-25-jdbc.md
@@ -16,7 +16,7 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;To play with JDBC, the first step is always to set up a database, for here, MySQL.
 
-&nbsp;&nbsp;&nbsp;&nbsp;For MacOS, it is very convenient to set up MySQL with `homebrew`. Check [this answer](https://tecadmin.net/install-mysql-macos/) and install MySQL to your local mac machine.
+&nbsp;&nbsp;&nbsp;&nbsp;For MacOS, it is very convenient to set up MySQL with `homebrew`. Check [this answer](https://tecadmin.net/install-mysql-macos/) and install MySQL to your local machine.
 
 &nbsp;&nbsp;&nbsp;&nbsp;To start, stop, restart or check status of your mysql database, use `mysql.server` command as:
 
