--- a/_posts/2019-07-31-ssh.md
+++ b/_posts/2019-07-31-ssh.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Strust & Spring & Hibernate"
+title:      "Strust & Spring & Mybaits"
 subtitle:   ""
 date:       2019-07-31
 author:     "Jiayi.Liu"
@@ -11,7 +11,9 @@ tags:
     - WebApp
     - Spring
     - Strust
-    - Hibernate
+    - Mybaits
 ---
+
+## Mybaits
 
 &nbsp;&nbsp;&nbsp;&nbsp;
