--- a/_posts/2019-07-31-ssh.md
+++ b/_posts/2019-07-31-ssh.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Strust & Spring & Mybaits"
+title:      "Strust & Spring & Mybatis"
 subtitle:   ""
 date:       2019-07-31
 author:     "Jiayi.Liu"
@@ -11,9 +11,15 @@ tags:
     - WebApp
     - Spring
     - Strust
-    - Mybaits
+    - Mybatis
 ---
 
-## Mybaits
+## Mybatis
+
+### Some Operation For MySQL
+
+- Check MySQL port: Firstly login to mysql with `mysql -u root -p` then use sql request `SHOW GLOBAL VARIABLES LIKE 'PORT';` to get the port.
+
+### Mybatis Major Procedure
 
 &nbsp;&nbsp;&nbsp;&nbsp;
