--- a/_posts/2019-07-31-ssh.md
+++ b/_posts/2019-07-31-ssh.md
@@ -22,4 +22,9 @@ tags:
 
 ### Mybatis Major Procedure
 
-&nbsp;&nbsp;&nbsp;&nbsp;
+##### Important Files
+
+- `mybatis-config.xml`: The file for major settings about Mybatis system, including user name and password for connecting to the database. Also, this file will pointing **resources** (the file below, which will include all our SQL command) that we will need to use.
+- `*.xml`: Here the `*` should be the name of your objects (elements). In this file, we will define *all the SQL command* and how the result will be presented (one-to-many or many-to-one etc).
+
+&nbsp;&nbsp;&nbsp;&nbsp;The procedure of use Mybatis to manage database is very similar as using JDBC. The first step is always to use the `org.apache.ibatis.session` class to build up a session between your Java program and the database. Then use the pre-written SQL command in `*.xml` as shown above to do CRUD (create, retrive, update, delete) to the data in database.
