--- a/_posts/2019-08-14-idea.md
+++ b/_posts/2019-08-14-idea.md
@@ -21,7 +21,7 @@ tags:
 
 ### Project Structure 
 
-&nbsp;&nbsp;&nbsp;&nbsp;As shown in this [official blog](https://www.jetbrains.com/help/idea/project-structure-dialog.html), the project structure view is to letting you set **project and IDE-level elements** such as libraries, modules, facets, and artifacts.
+&nbsp;&nbsp;&nbsp;&nbsp;As shown in this [official blog](https://www.jetbrains.com/help/idea/project-structure-dialog.html) (check the left part of this page for more details about project page, module etc.), the project structure view is to letting you set **project and IDE-level elements** such as libraries, modules, facets, and artifacts.
 
 &nbsp;&nbsp;&nbsp;&nbsp;The project structure can be used to **add jars** or change **build path**. It can be found in *File -> Project Structure*.
 
