--- a/_posts/2019-05-17-java-fund.md
+++ b/_posts/2019-05-17-java-fund.md
@@ -285,3 +285,27 @@ public class CarProducer<T> implements MyProducer<T>{
 
 - try - catch - finally - throw
 - throws
+
+### Reflection
+
+> Reflection allows us to inspect or/and modify **runtime** attributes of classes, interfaces, fields and methods. This particularly comes in handy when we don't know their names at compile time.
+
+&nbsp;&nbsp;&nbsp;&nbsp;By using reflection, what we can get is the *class object*, for each class in Java, there will only **one class object**. 
+
+&nbsp;&nbsp;&nbsp;&nbsp;There are two ways to **get the class object** : from class name and from an instance. To get class boject from class name, we can do `Class.forName(className)`. To get class object from an instance of that class, we can do `obj.getClass()`.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Having the class object, we can access the
+
+-  constructor : we can create new object from reflected constructor with `obj.getClass().getConstrucor().newInstance()`.
+- fields : we can set the value of specific field in specific instance of that type with `obj.getClass().getDeclaredField("fileName").set(obj, value)`.
+- methods : we can invoke method from an instance of this class with reflection.
+
+&nbsp;&nbsp;&nbsp;&nbsp;In framework that allows dependency injection and inverse of control such as Spring, reflection allows us to *set the class with config file* as shown in [this tutorial](http://how2j.cn/k/reflection/reflection-usage/1111.html#nowhere).
+
+### Generic Type
+
+> The purpose of generic type is to **allow "type" to be a parameter** to method, class and interface according to [this tutorial](https://www.geeksforgeeks.org/generics-in-java/).
+
+&nbsp;&nbsp;&nbsp;&nbsp;For generic class and interface, `<Class Object 1, Class Object 2, ...>` operator is used to define and give input to the class constructor.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Fot generic method, the generic type seems to be achieved by **reflection**. Java will use reflection to get the *runtime type* and use it as the supposed type.
