--- a/_posts/2019-12-15-cpp-fund.md
+++ b/_posts/2019-12-15-cpp-fund.md
@@ -28,6 +28,19 @@ tags:
 
 The new operator should only be used if the data object should **remain in memory until delete is called**. Otherwise if the new operator is not used, the object is automatically destroyed when it goes out of scope.
 
+##### Pointer, Reference, and Array Definition
+
+- Java Style: `String[] a;`
+- C++ Style: `int a[]; int* a; int& a;`
+
+##### Pass by Value & Pass by Reference
+
+&nbsp;&nbsp;&nbsp;&nbsp;References are generally implemented using pointers. A reference is same object, just with a different name and reference **must refer to an object**. Since references can’t be NULL, they are safer to use. In Java's term, pass by reference is to pass a **final** object.
+
+##### Variadic Arguments
+
+&nbsp;&nbsp;&nbsp;&nbsp;In C++ we allow a function to accept any number of arguments.  Indicated by a trailing `...`.
+
 ### Class
 
 #### Class Fundation
@@ -61,6 +74,8 @@ void Rectangle::set_values (int x, int y) {
 
 > In C++ to overload a method, the compiler only looks at **input parameters**. Just using different returning type will cause error.
 
+> Note that `const` keyword can be used for method overloading! You can have two method with the same input but one is const.
+
 &nbsp;&nbsp;&nbsp;&nbsp;Check [this tutorial](https://www.programiz.com/cpp-programming/function-overloading) for more details.
 
 ##### Friend Method
@@ -69,14 +84,24 @@ void Rectangle::set_values (int x, int y) {
 
 &nbsp;&nbsp;&nbsp;&nbsp;By using a friend method, we can **access private member of a class**! (Why not getter & setterr?) Check [this tutorial](https://www.programiz.com/cpp-programming/friend-function-class) for more detail about friend method.
 
+##### Init Fields in Constructor
+
+&nbsp;&nbsp;&nbsp;&nbsp;Use `var(val)` operation between function name and function body to initialize related `var`. An example of such **constructor** is:
+
+```
+class CVector {
+  public:
+    int x,y;
+    // constructor init x & y
+    CVector (int a,int b) : x(a), y(b) {}
+};
+```
+
 ##### Constructor Initializing
 
 &nbsp;&nbsp;&nbsp;&nbsp;There are many ways to initialize an object/class.
 
 ```
-#include <iostream>
-using namespace std;
-
 class Circle {
     double radius;
   public:
@@ -96,6 +121,127 @@ int main () {
 ```
 &nbsp;&nbsp;&nbsp;&nbsp;An advantage of uniform initialization over functional form is that, unlike parentheses, braces cannot be confused with function declarations.
 
+##### Operator Overload
 
+&nbsp;&nbsp;&nbsp;&nbsp;Operators are overloaded by means of operator functions, which are regular functions with special names: their name **begins by the operator keyword followed by the operator sign** that is overloaded. The syntax of operator overloading function is: `type operator sign (parameters) { /*... body ...*/ }`
 
+##### `const` keyword
 
+&nbsp;&nbsp;&nbsp;&nbsp;There are 3 things can be labled as const:
+
+1. const field
+2. const method
+3. const return type
+
+```
+int get() const {return x;}        // const member function
+const int& get() {return x;}       // member function returning a const&
+const int& get() const {return x;} // const member function returning a const&
+```
+
+&nbsp;&nbsp;&nbsp;&nbsp;Const member function can only access other **const** fields or methods. In essence, **const members shall not modify the state of an object**.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Const members are very common. **Most functions taking classes as parameters actually take them by const reference**, and thus, these functions can only access their const members:
+
+```
+class MyClass {
+    int x;
+  public:
+    MyClass(int val) : x(val) {}
+    const int& get() const {return x;}
+};
+
+void print (const MyClass& arg) {
+  cout << arg.get() << '\n';
+}
+
+int main() {
+  MyClass foo (10);
+  print(foo);
+
+  return 0;
+}
+```
+
+### Generic Type / Template
+
+> Remember that templates are replaced by actual functions by compiler.
+
+##### Function Template
+
+&nbsp;&nbsp;&nbsp;&nbsp;Defining a function template follows the same syntax as a regular function, except that it is **preceded by the template keyword and a series of template parameters** enclosed in angle-brackets `<>`:
+
+```
+template <template-parameters> function-declaration
+```
+
+&nbsp;&nbsp;&nbsp;&nbsp;Note that the template parameters can be multiple and separated by comma such as `template <typename A, typename B>`
+
+##### Class Template
+
+&nbsp;&nbsp;&nbsp;&nbsp;Just like function template, we can define class template in the same way. Note that if a member method is defined outside class definition, we need to **declear the template class again**.
+
+```
+template <class T>
+class mypair {
+    T a, b;
+  public:
+    mypair (T first, T second)
+      {a=first; b=second;}
+    T getmax ();
+};
+
+template <class T>
+T mypair<T>::getmax ()
+{
+  T retval;
+  retval = a>b? a : b;
+  return retval;
+}
+
+int main () {
+  mypair <int> myobject (100, 75);
+  cout << myobject.getmax();
+  return 0;
+}
+```
+
+##### Template specialization
+
+&nbsp;&nbsp;&nbsp;&nbsp;In the above, we know how to define a *universal* template, which means we can use it for any type. Even better, we can **specialize (override) the definition of the template class for any specific input type**.
+
+```
+template <class T>
+class mycontainer {
+    T element;
+  public:
+    mycontainer (T arg) {element=arg;}
+    T increase () {return ++element;}
+};
+
+// class template specialization:
+template <>
+class mycontainer <char> {
+    char element;
+  public:
+    mycontainer (char arg) {element=arg;}
+    char uppercase ()
+    {
+      if ((element>='a')&&(element<='z'))
+      element+='A'-'a';
+      return element;
+    }
+};
+
+int main () {
+  mycontainer<int> myint (7);
+  mycontainer<char> mychar ('j');
+  cout << myint.increase() << endl;
+  cout << mychar.uppercase() << endl;
+  return 0;
+}
+```
+
+##### Template with Multiple Type Parameter
+
+&nbsp;&nbsp;&nbsp;&nbsp;One great usage of template specialization is we can declare a primary template with a variadic template and then specialize for each supported number of template arguments. See [here](https://stackoverflow.com/questions/19923353/multiple-typename-arguments-in-c-template) for more information if interested.
