--- a/_posts/2019-12-15-cpp-fund.md
+++ b/_posts/2019-12-15-cpp-fund.md
@@ -245,3 +245,15 @@ int main () {
 ##### Template with Multiple Type Parameter
 
 &nbsp;&nbsp;&nbsp;&nbsp;One great usage of template specialization is we can declare a primary template with a variadic template and then specialize for each supported number of template arguments. See [here](https://stackoverflow.com/questions/19923353/multiple-typename-arguments-in-c-template) for more information if interested.
+
+### C++ OOP
+
+> [This tutorial](https://www.tutorialspoint.com/cplusplus/cpp_data_abstraction.htm) is a great resource for the C++ OOP topi.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Doesn't like Java, C++ doesn't provide OOP tool like `interface` and `abstract class`. As a result, C++ can be weaker than Java in **implementation decouple** such as `Car myCar = new ToyotaRV4()`.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Here are some possible ways to achieve OOP features in C++:
+
+- Abstraction : we directly use `private` and `public` keyword in C++ class to make abstraction from class (represent class with a buntch of public fields and methods).
+- Encapsulation : the same as abstraction, using `private` and `public`.
+- Interface : besides using access label to expose public interface, we can also use **virtual method** to make an abstract class / interface.
