--- a/_posts/2019-12-15-cpp-fund.md
+++ b/_posts/2019-12-15-cpp-fund.md
@@ -9,7 +9,6 @@ catalog: 	true
 tags:
     - C++
     - Programming
-    - Interview
 ---
 
 > I need this language for interview but apparently a programming language is just a tool for development. We should focus more on how we can design a system/software with this language.
@@ -18,7 +17,7 @@ tags:
 - [VS Code](https://code.visualstudio.com/docs/editor/editingevolved)
 - [Language Fundations](http://www.cplusplus.com/doc/tutorial)
 - [Project Based Learning (multiple languages)](https://github.com/tuvtran/project-based-learning)
-- [S3 File System @ Github](https://github.com/tuvtran/project-based-learning)
+- [S3 File System @ Github](https://github.com/s3fs-fuse/s3fs-fuse)
 
 ### Variables & Operator
 
@@ -257,3 +256,12 @@ int main () {
 - Abstraction : we directly use `private` and `public` keyword in C++ class to make abstraction from class (represent class with a buntch of public fields and methods).
 - Encapsulation : the same as abstraction, using `private` and `public`.
 - Interface : besides using access label to expose public interface, we can also use **virtual method** to make an abstract class / interface.
+
+### C++ Containers
+
+##### Vector and List
+
+- A C++ vector is a dynamically allocated array, which is almost the same as **ArrrayList in Java**. 
+- A C++ list is a **(Double) LinkedList** in Java.
+
+&nbsp;&nbsp;&nbsp;&nbsp;As a result, in C++ we can have random access in vector but not in list.
